--- a/index.html
+++ b/index.html
@@ -7,57 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <section class="sidebar">
-
-        <!-- Logo from freelogodesign.org -->
-        <div class="sidebar-header">
-            <img src="img/logo.png" alt="Logo of a cartoon octopus">
-        </div>
-
-        <nav class="sidebar-nav">
-            <ul>
-                <li>
-                    <img src="img/home.svg" alt="Logo">
-                    <p>Home</p>
-                </li>
-                <li>
-                    <img src="img/home.svg" alt="Logo">
-                    <p>Test</p>
-                </li>
-                <li>
-                    <img src="img/home.svg" alt="Logo">
-                    <p>Test</p>
-                </li>
-                <li>
-                    <img src="img/home.svg" alt="Logo">
-                    <p>Test</p>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <img src="img/home.svg" alt="Logo">
-                    <p>Test</p>
-                </li>
-                <li>
-                    <img src="img/home.svg" alt="Logo">
-                    <p>Test</p>
-                </li>
-                <li>
-                    <img src="img/home.svg" alt="Logo">
-                    <p>Test</p>
-                </li>
-            </ul>
-
-        </nav>
-
-    </section>
 
     <section class="header">
-
         <div class="header-top">
 
             <div class="header-top-left">
@@ -65,53 +22,106 @@
             </div>
 
             <div class="header-top-right">
-                <img src="img/home.svg" alt="" srcset="">
-                <img src="img/home.svg" alt="" srcset="">
-                <p>|</p>
-                <div class="circle"></div>
+                <img src="img/magnify.svg" alt="Magnifying glass icon representing search" srcset="">
+                <img src="img/bell.svg" alt="Bell icon representing notifications" srcset="">
+                <span>|</span>
+                <p>Ash Ketchum</p>
+                <img src="img/ash.png" alt="A cropped image of Ash Ketchum from Pokemon" srcset="" id="profile-pic">
             </div>
 
         </div>
 
         <div class="header-bottom">
-            <div class="header-bottom-box"></div>
-            <div class="header-bottom-box"></div>
-            <div class="header-bottom-box"></div>
-            <div class="header-bottom-box"></div>
+            <div class="header-bottom-container">
+                <p>HP</p>
+                <h1 id="hp"></h1>
+            </div>
+            <div class="header-bottom-container">
+                <p>Attack</p>
+                <h1 id="attack"></h1>
+            </div>
+            <div class="header-bottom-container">
+                <p>Defense</p>
+                <h1 id="defense"></h1>
+            </div>
+            <div class="header-bottom-container">
+                <p>Special Attack</p>
+                <h1 id="special-attack"></h1>
+            </div>
+            <div class="header-bottom-container">
+                <p>Special Defense</p>
+                <h1 id="special-defense"></h1>
+            </div>
+            <div class="header-bottom-container">
+                <p>Speed</p>
+                <h1 id="speed"></h1>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="sidebar">
+        <!-- Logo from freelogodesign.org -->
+        <div class="sidebar-header">
+            <img src="img/pokeball.png" alt="Logo of a cartoon octopus">
         </div>
 
+        <nav class="sidebar-nav">
+            <ul>
+                <li>
+                    <img src="img/home.svg" alt="Logo">
+                    <p>Dashboard</p>
+                </li>
+                <li id="active">
+                    <img src="img/pokeball-icon.png" alt="Logo">
+                    <p>Pokedex</p>
+                </li>
+                <li>
+                    <img src="img/cart.svg" alt="Logo">
+                    <p>Marketplace</p>
+                </li>
+                <li>
+                    <img src="img/heart.svg" alt="Logo">
+                    <p>Favorites</p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <img src="img/settings.svg" alt="Logo">
+                    <p>Settings</p>
+                </li>
+                <li>
+                    <img src="img/exit.svg" alt="Logo">
+                    <p>Log Out</p>
+                </li>
+            </ul>
 
+        </nav>
 
     </section>
 
     <section class="body">
+        <div class="body-design">
 
-        <div class="body-box">
-            <img src="img/omen.webp" alt="">
-            <h1>#001</h1>
+            <div class="body-design-container">
+                <img src="" alt="" id="pokemon-type-img">
+                <h2 id="pokemon-name"></h2>
+                <h2 id="pokemon-type-txt"></h2>
+            </div>
+
+            <div class="body-design-container">
+                <img src="" alt="" id="pokemon">
+                <h1 id="pokemon-number"></h1>
+            </div>
+
         </div>
-        <div class="body-box">
-            <canvas id="myChart"></canvas>
+
+        <div class="body-info">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, aliquam deserunt minima distinctio, ut
+            consequatur quis fuga, quia possimus in rem quas vero autem sit. Tempora, nostrum minus. Labore, quaerat?
         </div>
-        <div class="body-box">
-            <h1>?</h1>
-        </div>
-        <div class="body-box">
-            <h1>?</h1>
-        </div>
-        <div class="body-box">
-            <h1>?</h1>
-        </div>
-        <div class="body-box">
-            <h1>?</h1>
-        </div>
-        <div class="body-box">
-            <h1>?</h1>
-        </div>
-        <div class="body-box">
-            <h1>?</h1>
-        </div>
-        <div class="body-box">
+
+        <div class="body-random-button" id="randomizer">
             <h1>?</h1>
         </div>
 
