--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700;800&family=Work+Sans:ital,wght@0,900;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -103,16 +105,17 @@
     <section class="body">
         <div class="body-design">
 
-            <div class="body-design-container">
+            <div class="body-design-pokemon">
+                <img src="" alt="" id="pokemon">
+                <h1 id="pokemon-name"></h1>
+                <h1 id="pokemon-number"></h1>
+            </div>
+
+            <div class="body-design-type">
                 <img src="" alt="" id="pokemon-type-img">
-                <h2 id="pokemon-name"></h2>
                 <h2 id="pokemon-type-txt"></h2>
             </div>
 
-            <div class="body-design-container">
-                <img src="" alt="" id="pokemon">
-                <h1 id="pokemon-number"></h1>
-            </div>
 
         </div>
 
